# backtrader_next

./: README.md  pyproject.toml
backtrader/: __init__.py  cerebro.py  feed.py  fillers.py  indicator.py  linebuffer.py  lineiterator.py  lineroot.py  lineseries.py  observer.py  strategy.py  talib.py  trade.py  version.py  writer.py
backtrader/analyzers/: eq.py
backtrader/feeds/: pandafeed.py  yahoo.py
backtrader/indicators/: lrsi.py  psar.py  wma.py
backtrader/nind/: __init__.py  bandpass.py  correlation_trend_ssf.py  dsma.py  ema.py  hilbert.py  instantaneous_trend.py  macd.py  mama_fama.py  momentum.py  roc.py  roofing_filter.py  second_derivative.py  sma.py  supersmoother.py  trunc_bandpass.py  ultimatebands.py  ultimatechannel.py  ultimatesmoother.py  utils.py
backtrader/nplot/: __init__.py  nplot.py  nscheme.py  stats.py
backtrader/plot/: finance.py  multicursor.py  plot.py
backtrader/utils/: date.py
backtrader_next/: __init__.py  analyzer.py  broker.py  cerebro.py  comminfo.py  dataseries.py  feed.py  fillers.py  functions.py  linebuffer.py  lineiterator.py  lineseries.py  metabase.py  observer.py  order.py  signal.py  store.py  strategy.py  talib.py  timer.py  tradingcal.py  version.py  writer.py
backtrader_next/analyzers/: __init__.py  annualreturn.py  calmar.py  drawdown.py  eq.py  leverage.py  logreturnsrolling.py  periodstats.py  positions.py  pyfolio.py  returns.py  sharpe.py  sqn.py  timereturn.py  tradeanalyzer.py  transactions.py  vwr.py
backtrader_next/brokers/: bbroker.py  ibbroker.py  oandabroker.py  vcbroker.py
backtrader_next/btrun/: btrun.py
backtrader_next/feeds/: blaze.py  chainer.py  ibdata.py  influxfeed.py  oanda.py  pandafeed.py  quandl.py  rollover.py  vcdata.py  vchartfile.py  yahoo.py
backtrader_next/filters/: bsplitter.py  calendardays.py  datafiller.py  datafilter.py  session.py
backtrader_next/futures/: __init__.py  futures.py
backtrader_next/indicators/: __init__.py  accdecoscillator.py  awesomeoscillator.py  basicops.py  crossover.py  hadelta.py  heikinashi.py  hurst.py  ichimoku.py  kst.py  ols.py  tsi.py  (+3 more)
docs/: README.md
(+154 files in other folders)
