[project]
name = "backtrader-next"
version = "0.1.0"
description = "Live Trading and backtesting platform in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bn-lightweight-charts>=0.2.1",
    "numba>=0.61.2",
    "numpy>=2.0,<2.3",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
]

